crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__logic__I095-multiline-logic-with-glue.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/logic/I095-multiline-logic-with-glue
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "a b\n" [Continue]
> "a b\n" [Done]
outcome: Done
