crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__logic__I097-logic-lines-with-newlines.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/logic/I097-logic-lines-with-newlines
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "text1\n" [Continue]
> "text 2\n" [Continue]
> "text1\n" [Continue]
> "text 2\n" [Done]
outcome: Done
